<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uset_admin_type" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/uset_state_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:id="@+id/uset_active" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block"
            android:id="@+id/uset_block" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="sans-serif"
            android:id="@+id/uset_cancel" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:fontFamily="sans-serif"
            android:id="@+id/uset_update" />
    </LinearLayout>


</LinearLayout>