<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/im_pucdate"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:hint="@string/from"
        android:editable="false"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/im_expdate"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:hint="@string/to"
        android:editable="false"
        android:layout_gravity="center_horizontal" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/category"

            android:id="@+id/textView30" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/im_cat" />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/seller"

            android:id="@+id/textView32" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/im_sel" />



    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:hint="key word"
        android:id="@+id/im_key" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="sans-serif"
            android:id="@+id/im_cancel" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:fontFamily="sans-serif"
            android:id="@+id/im_sort" />

    </LinearLayout>

</LinearLayout>