<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/um_state"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:id="@+id/um_ac" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inactive"
                android:id="@+id/um_inac" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="sans-serif"
            android:id="@+id/um_cancel" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:fontFamily="sans-serif"
            android:id="@+id/um_update" />
    </LinearLayout>

</LinearLayout>