<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/days"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/textView34" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/days"
        android:id="@+id/daily_day" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/downloads"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/textView35" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/downloads"
        android:id="@+id/daily_down" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_up_daily_cancel" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/btn_up_daily" />
    </LinearLayout>

</LinearLayout>