<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/slice_msg"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/textView36" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:fontFamily="sans-serif"
            android:id="@+id/imgset_slice_cancel" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:fontFamily="sans-serif"
            android:id="@+id/imgset_slice_remove" />

    </LinearLayout>

</LinearLayout>