<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_grey_100"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/become_contributor"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/md_disabled_hint_text"
            android:id="@+id/textView11" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/md_divider">

            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/become_contributor_pahara"
            android:fontFamily="sans-serif-medium"

            android:textColor="@color/md_disabled_hint_text"
            android:id="@+id/textView12" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnCount="8"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/md_grey_100"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/become_step_1"
                android:layout_column="3"

                android:layout_columnSpan="3"
                android:padding="15dp"
                android:layout_marginRight="15dp"

                android:layout_gravity="center"
                android:background="@color/md_deep_purple_500_50"
                android:id="@+id/textView16" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="324dp"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/become_step_1_title"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="14dp"
                    android:id="@+id/textView17" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/become_step_1_para"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="12dp"
                    android:id="@+id/textView18" />
            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnCount="8"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/md_grey_100"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/become_step_2"
                android:layout_column="3"

                android:layout_columnSpan="3"
                android:padding="15dp"
                android:layout_marginRight="15dp"

                android:layout_gravity="center"
                android:background="@color/md_deep_purple_500_50"
                android:id="@+id/textView19" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="324dp"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/become_step_2_title"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="14dp"
                    android:id="@+id/textView20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/become_step_2_para"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="12dp"
                    android:id="@+id/textView21" />
            </LinearLayout>
        </GridLayout>


        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnCount="8"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/md_grey_100"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/become_step_3"
                android:layout_column="3"

                android:layout_columnSpan="3"
                android:padding="15dp"
                android:layout_marginRight="15dp"

                android:layout_gravity="center"
                android:background="@color/md_deep_purple_500_50"
                android:id="@+id/textView13" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="324dp"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/become_step_3_title"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="14dp"
                    android:id="@+id/textView14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/become_step_3_para"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="12dp"
                    android:id="@+id/textView15" />
            </LinearLayout>
        </GridLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_text_white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/first_name"
            android:fontFamily="sans-serif-thin"

            android:id="@+id/bec_fn"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/last_name"
            android:fontFamily="sans-serif-thin"

            android:id="@+id/bec_ln"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_contributor"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="@color/md_text"

                android:id="@+id/bec_btn"/>
        </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="@color/md_grey_100"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15dp"
            android:fontFamily="sans-serif-thin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/contributor_info"
            android:id="@+id/policy_phaa1"/>

    </LinearLayout>
</LinearLayout>